# stx-kingbird

./: .gitreview  MANIFEST.in  requirements.txt  setup.cfg  tox.ini
dcmanager/: __init__.py  version.py
dcmanager/api/: api_config.py  app.py  enforcer.py
dcmanager/api/controllers/: restcomm.py  root.py
dcmanager/api/controllers/v1/: alarm_manager.py  root.py  subclouds.py  sw_update_options.py  sw_update_strategy.py
dcmanager/cmd/: api.py  manage.py  manager.py
dcmanager/common/: config.py  consts.py  context.py  endpoint_cache.py  exceptions.py  i18n.py  manager.py  messaging.py  policy.py  serializer.py  utils.py  version.py
dcmanager/db/: api.py  utils.py
dcmanager/db/sqlalchemy/: api.py  migration.py  models.py
dcmanager/db/sqlalchemy/migrate_repo/versions/: 001_first_version.py
dcmanager/drivers/openstack/: keystone_v3.py  patching_v1.py  sysinv_v1.py  vim.py
dcmanager/manager/: patch_audit_manager.py  scheduler.py  service.py  subcloud_audit_manager.py  subcloud_manager.py  sw_update_manager.py
dcmanager/objects/: base.py
dcmanager/rpc/: client.py
dcmanager/tests/: base.py  utils.py
dcmanager/tests/unit/: test_dcmanager.py
dcmanager/tests/unit/api/: test_root_controller.py
dcmanager/tests/unit/api/v1/controllers/: test_subclouds.py  test_sw_update_strategy.py
dcmanager/tests/unit/common/: test_endpoint_cache.py
dcmanager/tests/unit/db/: test_subcloud_db_api.py
dcmanager/tests/unit/drivers/: test_keystone_v3.py  test_sysinv_v1.py
dcmanager/tests/unit/manager/: test_patch_audit_manager.py  test_service.py  test_subcloud_audit_manager.py  test_subcloud_manager.py  test_sw_update_manager.py
dcmanager/tests/unit/objects/: test_base.py
dcmanager/tests/unit/rpc/: test_rpc_client.py
dcmanager/tests/unit/utils/: test_utils.py
dcorch/api/proxy/apps/: acceptor.py  controller.py
dcorch/api/proxy/common/: constants.py  service.py  utils.py
dcorch/common/: consts.py  endpoint_cache.py
dcorch/db/sqlalchemy/: api.py  models.py
dcorch/drivers/openstack/: keystone_v3.py  sdk.py  sdk_platform.py  sysinv_v1.py
dcorch/engine/: quota_manager.py  service.py  sync_thread.py
dcorch/objects/: base.py
dcorch/tests/unit/db/: test_subcloud_db_api.py  test_subcloud_resource_db_api.py
kingbird/drivers/openstack/: neutron_v2.py
