[metadata]
name = distributedcloud
summary = Distributed cloud is...
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
#    kingbird
     dcmanager
     dcorch

[entry_points]
console_scripts =
#    kingbird-api = kingbird.cmd.api:main
#    kingbird-engine = kingbird.cmd.engine:main
#    kingbird-manage = kingbird.cmd.manage:main
    dcmanager-api = dcmanager.cmd.api:main
    dcmanager-manager = dcmanager.cmd.manager:main
    dcmanager-manage = dcmanager.cmd.manage:main
    dcorch-api = dcorch.cmd.api:main
    dcorch-engine = dcorch.cmd.engine:main
    dcorch-manage = dcorch.cmd.manage:main
    dcorch-snmp = dcorch.cmd.snmp:main
    dcorch-api-proxy = dcorch.cmd.api_proxy:main

tempest.test_plugins =
    kingbird_tests = kingbird.tests.tempest.scenario.plugin:KingbirdTempestPlugin

oslo.config.opts =
    kingbird.common.config = kingbird.common.config:list_opts
    kingbird.engine.quota_manager = kingbird.engine.quota_manager:list_opts
    kingbird.engine.kingbird_lock = kingbird.engine.kingbird_lock:list_opts
    kingbird.common.api.api_config = kingbird.api.api_config:list_opts
    dcorch.common.config = dcorch.common.config:list_opts
    dcorch.common.api.api_config = dcorch.api.api_config:list_opts
    dcorch.common.snmp.snmp_config = dcorch.snmp.snmp_config:list_opts
    dcorch.engine.quota_manager = dcorch.engine.quota_manager:list_opts
    dcorch.engine.dcorch_lock = dcorch.engine.dcorch_lock:list_opts
    dcmanager.common.config = dcmanager.common.config:list_opts
    dcmanager.common.api.api_config = dcmanager.api.api_config:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kingbird/locale
domain = kingbird

[update_catalog]
domain = kingbird
output_dir = kingbird/locale
input_file = kingbird/locale/kingbird.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kingbird/locale/kingbird.pot
